--- a/home/css/style.css
+++ b/home/css/style.css
@@ -2460,3 +2460,10 @@ header .form-inline {
         .right-panel .content #bootstrap-data-table_wrapper .table td,
         .right-panel .content #bootstrap-data-table_wrapper .table th {
           padding: 5px; } }
+
+.boxShadow {
+  transition: box-shadow .3s;
+}
+.boxShadow:hover {
+  box-shadow: 0px 0px 52px -30px rgba(0,0,0,0.69);
+}
