--- a/home/css/style.css
+++ b/home/css/style.css
@@ -993,6 +993,11 @@ body.dark .rsimg{
   filter: contrast(0);
 }
 
+body.dark .nav-tabs .nav-link.active{
+  color: #e53a2e;
+  background-color: #272c33;
+}
+
 div[class*="col-"] {
   float: left; }
 
