--- a/home/css/style.css
+++ b/home/css/style.css
@@ -998,6 +998,10 @@ body.dark .nav-tabs .nav-link.active{
   background-color: #272c33;
 }
 
+body.dark .rcolor{
+  color: #f13a2e !important;
+}
+
 div[class*="col-"] {
   float: left; }
 
