--- a/home/css/style.css
+++ b/home/css/style.css
@@ -1002,6 +1002,15 @@ body.dark .rcolor{
   color: #f13a2e !important;
 }
 
+.input-not-spin::-webkit-outer-spin-button,
+.input-not-spin::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.input-not-spin[type=number] {
+  -moz-appearance: textfield;
+}
+
 div[class*="col-"] {
   float: left; }
 
