--- a/home/loader.css
+++ b/home/loader.css
@@ -18,3 +18,39 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.rectangle-bounce {
+	 position: relative;
+	 display: flex;
+	 justify-content: space-between;
+	 width: 20px;
+	 height: 30px;
+	 transition: all 300ms ease-in-out 0s;
+	 z-index: 1;
+}
+ .rectangle-bounce .rect-1, .rectangle-bounce .rect-2, .rectangle-bounce .rect-3, .rectangle-bounce .rect-4, .rectangle-bounce .rect-5 {
+	 width: 15%;
+	 height: 70%;
+	 background-color: #f23a2e;
+	 animation: rectangle-bounce 1.5s infinite ease-in-out;
+}
+ .rectangle-bounce .rect-2 {
+	 animation-delay: -1.4s;
+}
+ .rectangle-bounce .rect-3 {
+	 animation-delay: -1.3s;
+}
+ .rectangle-bounce .rect-4 {
+	 animation-delay: -1.2s;
+}
+ .rectangle-bounce .rect-5 {
+	 animation-delay: -1.1s;
+}
+ @keyframes rectangle-bounce {
+	 0%, 40%, 100% {
+		 transform: scaleY(0.4);
+	}
+	 20% {
+		 transform: scaleY(1);
+	}
+}
