--- a/home/css/style.css
+++ b/home/css/style.css
@@ -2576,3 +2576,19 @@ body.dark .user-area .user-menu .nav-link{
 body.dark .boxShadow:hover{
   box-shadow: 0px 0px 52px -30px rgb(241, 58, 46);
 }
+
+::-webkit-scrollbar {
+width: 5px;
+}
+
+::-webkit-scrollbar-track {
+background: #f1f1f1; 
+}
+
+::-webkit-scrollbar-thumb {
+background: #888; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+background: #555; 
+}
