--- a/home/css/style.css
+++ b/home/css/style.css
@@ -910,8 +910,7 @@ body {
   display: table;
   font-family: 'Open Sans' sans-serif !important;
   font-size: 16px;
-  width: 100%;
-  transition: .3s ease all; }
+  width: 100%; }
 body.dark{
   background: #242528;
 }
