--- a/home/loader.css
+++ b/home/loader.css
@@ -54,3 +54,24 @@
 		 transform: scaleY(1);
 	}
 }
+
+@keyframes loaderV2 {
+  to {transform: rotate(360deg);}
+}
+ 
+.loaderV2:before {
+  z-index: 1000;
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  border-top: 2px solid #F44336;
+  border-right: 2px solid transparent;
+  animation: spinner .7s linear infinite;
+}
