--- a/home/loader.css
+++ b/home/loader.css
@@ -73,5 +73,5 @@
   border-radius: 50%;
   border-top: 2px solid #F44336;
   border-right: 2px solid transparent;
-  animation: spinner .7s linear infinite;
+  animation: loaderV2 .7s linear infinite;
 }
