--- a/home/loader.css
+++ b/home/loader.css
@@ -62,6 +62,7 @@
 .loaderV2:before {
   position: fixed;
   z-index: 1000;
+  margin: 0;
   content: '';
   box-sizing: border-box;
   position: absolute;
